# ros2yolo_python

./: LICENSE  README(KOREAN).md  README.md  camera.py  command.txt  cv_test.cpp  detect.txt  rosyolo  rosyolo_camera_sh  size.txt  test2_sh
cfg/: coco.names  yolov4.cfg
custom_msg/: CMakeLists.txt
custom_msg/install/: local_setup.sh  setup.sh
custom_msg/install/custom_msg/include/custom_msg/msg/: rosidl_typesupport_fastrtps_c__visibility_control.h
custom_msg/install/custom_msg/include/custom_msg/msg/detail/: ros2_yolo__builder.hpp  ros2_yolo__functions.c  ros2_yolo__struct.h  ros2_yolo__type_support.c
custom_msg/install/custom_msg/share/ament_index/resource_index/rosidl_interfaces/: custom_msg
custom_msg/install/custom_msg/share/custom_msg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
custom_msg/install/custom_msg/share/custom_msg/cmake/: ament_cmake_export_include_directories-extras.cmake  custom_msgConfig.cmake  custom_msg__rosidl_typesupport_cExport-noconfig.cmake  custom_msg__rosidl_typesupport_introspection_cppExport-noconfig.cmake
custom_msg/install/custom_msg/share/custom_msg/msg/: Ros2Yolo.idl  Ros2Yolo.msg
custom_msg/log/: latest_build
custom_msg/msg/: Ros2Yolo.msg
install/: local_setup.sh
install/custom_msg/include/custom_msg/msg/: ros2_yolo.hpp
install/custom_msg/include/custom_msg/msg/detail/: ros2_yolo__builder.hpp  ros2_yolo__functions.c  ros2_yolo__functions.h  ros2_yolo__struct.h  ros2_yolo__struct.hpp  ros2_yolo__traits.hpp  ros2_yolo__type_support.c  ros2_yolo__type_support.cpp  ros2_yolo__type_support.h
install/custom_msg/share/custom_msg/: local_setup.dsv  local_setup.sh  package.sh
install/custom_msg/share/custom_msg/cmake/: custom_msg__rosidl_typesupport_cppExport-noconfig.cmake
install/custom_msg/share/custom_msg/msg/: Ros2Yolo.idl  Ros2Yolo.msg
install/ros2yolo/lib/ros2yolo/: ros2_yolo  yolo_map
install/ros2yolo/share/ros2yolo/: package.bash  package.ps1
log/: latest_build
ros1_bridge/: CMakeLists.txt  command.txt
ros1_bridge/src/: simple_bridge_1_to_2.cpp
ros2yolo/: setup.cfg  setup.py
ros2yolo/ros2yolo/: ros2_yolo.py  yolo_map.py
ros2yolo/ros2yolo/install/: local_setup.sh  setup.sh
ros2yolo/ros2yolo/log/: latest_build
rosyolo_final/custom_msg/install/: local_setup.sh  setup.sh
rosyolo_final/custom_msg/install/custom_msg/share/custom_msg/: package.sh
rosyolo_final/custom_msg/install/custom_msg/share/custom_msg/cmake/: custom_msg__rosidl_typesupport_introspection_cppExport.cmake
rosyolo_final/custom_msg/install/custom_msg/share/custom_msg/msg/: Vn300.idl
rosyolo_final/custom_msg/log/: latest_build
rosyolo_final/install/: setup.sh
rosyolo_final/install/custom_msg/include/custom_msg/msg/detail/: ros2_yolo__rosidl_typesupport_fastrtps_c.h  ros2_yolo__struct.hpp
rosyolo_final/install/custom_msg/share/ament_index/resource_index/parent_prefix_path/: custom_msg
rosyolo_final/install/custom_msg/share/custom_msg/cmake/: custom_msg__rosidl_typesupport_cppExport.cmake  rosidl_cmake-extras.cmake
rosyolo_final/install/ros2yolo/share/ros2yolo/: package.dsv  package.sh  package.zsh
rosyolo_final/log/: latest_build
rosyolo_final/ros2yolo/: package.xml  setup.py
tdr3000/src/custom_msg/: CMakeLists.txt  README.md
tdr3000/src/custom_msg/msg/: Tdr3000.msg
tdr3000/src/py_tdr3000/: package.xml  setup.cfg  setup.py
tdr3000/src/py_tdr3000/py_tdr3000/: sir_2020.py  tdr_3000.py
usb_cam/launch/: usb_cam.launch  usb_cam2.launch  usb_cam3.launch  usb_cam4.launch
(+7 files in other folders)
